# patches

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  image_check.ipynb  main.py  make_pathch.sh  mp_patches.sh  patches.sh  pyproject.toml  requirements.txt
agent/: file_watcher.py  filter_abnormal_area.py  settings.py  utils.py
resources/: config.yaml
